--- a/distance/css/style.css
+++ b/distance/css/style.css
@@ -9,12 +9,11 @@ body{
 .header {
     padding-top: 6px;
     padding-bottom: 6px;
-    background-color: #0050B3;
+    background-color: #0B61A4;
 }
 .header-block {
     max-width: 1200px;
     margin: auto;
-    /* border: 1px solid yellow; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -202,6 +201,7 @@ body{
 .create-post-header {
     background: #F5F5F5;
     padding: 9px 16px;
+    border-bottom: 1px solid #D9D9D9;
 }
 .create-post-title {
     margin: 0;
@@ -568,14 +568,16 @@ body{
     padding: 0 16px;
     display: flex;
     align-items: center;
-    
+    margin-bottom: 16px;
 }
+.page-body-user {
+    display: flex;
 
+}
 .name-message-notification {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    
+    justify-content: center;
 }
 
 .page-body-title {
@@ -583,4 +585,95 @@ body{
     font-size: 14px;
     line-height: 22px;
     color: #0050B3;
+}
+.messages, 
+.notifications {
+    display: flex;
+    align-items: center;
+}
+.messages-icon, 
+.notifications-icon {
+    fill: #262626;
+    margin-right: 4px;
+}
+.messages-text, 
+.notifications-text {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    color: #8C8C8C;
+}
+.message-counter,
+.notification-counter {
+    width: 17px;
+    height: 22px;
+    background: #F5F5F5;
+    border: 1px solid #D9D9D9;
+    border-radius: 4px;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    color: #595959;
+    margin-left: 5px;
+}
+
+.your-page-footer {
+    margin-top: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+.your-page-footer::before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #E8E8E8;
+    margin-bottom: 16px;
+}
+.all-footer-buttons {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+.your-page-footer-button {
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    border-right: none;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #595959;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    min-width: 110px;
+}
+.your-page-footer-button:last-child {
+    border-right: 1px solid #D9D9D9;
+}
+
+.total-amount {
+    display: block;
+    text-align: center;
+    width: 100%;
+    font-size: 24px;
+    line-height: 32px;
+    color: #262626;
+}
+.amount-this-week {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.amount-this-week-counter {
+    font-size: 14px;
+    line-height: 22px;
+    color: #8C8C8C;
+    margin-right: 3px;
+    text-align: center;
+}
+.amount-this-week-text {
+    font-size: 14px;
+    line-height: 22px;
+    color: #8C8C8C;
+    text-align: center;
 }
