--- a/distance/css/style.css
+++ b/distance/css/style.css
@@ -5,11 +5,17 @@
 body{
     font-family: sans-serif;
     background: #E5E5E5;
+    padding-top: 46px;
 }
 .header {
     padding-top: 6px;
     padding-bottom: 6px;
     background-color: #0B61A4;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
 }
 .header-block {
     max-width: 1200px;
@@ -17,6 +23,22 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.m-menu {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0;
+    margin-left: 12px;
+    border: none;
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+}
+.m-menu .line {
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
 }
 .search-input {
     font-size: 14px;
@@ -676,4 +698,50 @@ body{
     line-height: 22px;
     color: #8C8C8C;
     text-align: center;
+}
+@media (max-width: 1250px) {
+    .container {
+        justify-content: flex-start;
+        width: 95%;
+    }
+    .header-block {
+        width: 95%;
+    }
+    .right-sidebar {
+        display: none;
+    }
+}
+@media (max-width: 960px) {
+    .header .user {
+        display: none;
+    }
+    .navigation-panel {
+        display: none;
+    }
+}
+@media (max-width: 840px) {
+    .menu-sidebar {
+        position: fixed;
+        left: 0;
+        top: 25px;
+        width: 100%;
+        height: 100%;
+        max-width: 250px;
+        background-color: #f1f1f1;
+        padding-top: 12px;
+        padding-left: 2%;
+        transform: translateX(-100%);
+        transition: transform 0.2s;
+    }
+    .menu-sidebar.active {
+        transform: translateX(0%);
+    }
+    .m-menu {
+        display: flex;
+    }
+}
+@media (max-width: 760px) {
+    .seach {
+        display: none;
+    }
 }
